apps/gramnuri-api/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gramnuri-api-httproute
  namespace: prod
spec:
  hostnames:
    - api.landskipifyai.com
